[package]
name = "hypercube"
description = "The next-generation IDE focused on language rather than text"
version = "0.0.1"

license = "MIT"
readme = "readme.md"

authors = ["Ilshat Sultanov <ilshat@sultanov.team>"]
homepage = "https://hypercube.red"
repository = "https://github.com/lazy-cat-io/hypercube"
categories = []

edition = "2021"
rust-version = "1.64"
exclude = []


[dependencies]
# logger
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

# async
tokio = { version = "1.21.2", features = ["full"]}

# render 
wgpu = "0.14.0"

# fonts
wgpu_glyph = "0.17.0"

# window
tao = "0.14.0"
