[package]
name = "hypercube"
description = "The next-generation IDE focused on language rather than text"
version = "0.0.1"

license = "MIT"
readme = "readme.md"

authors = ["Ilshat Sultanov <ilshat@sultanov.team>"]
homepage = "https://hypercube.red"
repository = "https://github.com/lazy-cat-io/hypercube"
categories = []

edition = "2021"
rust-version = "1.65"
exclude = []


[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
dirs = "4.0.0"
pollster = "0.2.5"
tao = "0.14.0"
tokio = { version = "1.21.2", features = ["full"]}
toml = "0.5.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
wgpu = "0.14.0"
wgpu_text = "0.6.4"


[dev-dependencies]
clippy = "0.0.302"

